software-center (3.1.11) UNRELEASED; urgency=low

  * softwarecenter/view/widgets/spinner.py:
    - modify to allow updating spinner label text on the fly
  * software-center,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/softwarepane.py:
    - defer loading the categories pane in the main view and display
      a spinner while it's loading, provides further startup time
      improvement
  * test/test_gui_buy_something.py:
    - fix test case
  * softwarecenter/app.py,
    softwarecenter/view/historypane.py:
    - connect app-list-changed signal handlers after each pane's
      view is fully initialized to insure correct status bar
      updating (fixes failure in test_supported_only test case)
  * softwarecenter/app.py:
    - don't back up one level in the navigation hierarchy if the
      backspace key is pressed while entering information during
      the purchase process (LP: #705676) 

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 20 Jan 2011 18:47:32 -0500

software-center (3.1.10) natty; urgency=low

  [ Michael Vogt ]
  * include full AUTHORS info into the about dialog,
    based on the lp:~adnane002/software-center/fix.632770
    branch (LP: #632770)
  * data/ui/SoftwareCenter.ui:
    - add translator_credits (LP: #632770), thanks to 
      Adnane Belmadiaf 
  * merged lp:~aaronp/software-center/fix-699898, many thanks
    to Aaron Peachey (LP: #699898)

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't crash on pressing backspace in the history pane (LP: #696639)
  * softwarecenter/backend/aptd.py:
    - play nicely after cancelling policykit dialog
  * softwarecenter/db/application.py:
    - display correct version number for installed packages (LP: #695026)
  * softwarecenter/distro/*.py:
    - fix broken translations (LP: #703610)

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/backend/aptd.py,
    softwarecenter/models/appstore.py,